<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <TextView
        android:id="@+id/settings_display_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_radio_group"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/settings_display_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/settings_display_mode_title">

        <RadioButton
            android:id="@+id/view_top_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_top_10" />

        <RadioButton
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:checked="true" />

        <RadioButton
            android:id="@+id/view_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_selected" />



    </RadioGroup>


    <TextView
        android:id="@+id/settings_sort_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_radio_group"
        app:layout_constraintTop_toBottomOf="@id/settings_display_mode"
        android:padding="10dp"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/settings_sort_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/settings_sort_mode_title">

        <RadioButton
            android:id="@+id/sort_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_daily" />

        <RadioButton
            android:id="@+id/sort_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_weekly"
            android:checked="true" />

        <RadioButton
            android:id="@+id/sort_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_monthly" />



    </RadioGroup>


    <Button
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Settings"
        android:onClick="save"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <include layout="@layout/recording_dot" />

</android.support.constraint.ConstraintLayout>