<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".additionalInfoActivities.AdditionalInfoTrackersActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:theme="@style/ToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/per_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="App Title"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/per_app_icon"
            app:layout_constraintTop_toTopOf="@+id/per_app_icon" />

        <ImageView
            android:id="@+id/per_app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/trackerDevNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Developer"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/per_app_title" />

        <TextView
            android:id="@+id/genreAverageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Genre"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="App Genre:"
            android:textColor="@color/offWhite"
            app:layout_constraintStart_toEndOf="@+id/per_app_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="App Developer:"
            android:textColor="@color/offWhite"
            app:layout_constraintStart_toEndOf="@+id/per_app_icon"
            app:layout_constraintTop_toBottomOf="@+id/per_app_title" />


    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:theme="@style/ToolBarStyle" />

    <TextView
        android:id="@+id/genreAverageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="20"
        android:textColor="@color/colorAccentDark"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/genreLabelFirst"
        app:layout_constraintStart_toStartOf="@+id/genreLabelFirst"
        app:layout_constraintTop_toBottomOf="@+id/genreLabelFirst" />

    <TextView
        android:id="@+id/thisAppLabelFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tracker_this_app_first"
        android:textColor="@color/colorAccentDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/thisAppValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="14"
        android:textColor="@color/colorAccentDark"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/thisAppLabelFirst"
        app:layout_constraintStart_toStartOf="@+id/thisAppLabelFirst"
        app:layout_constraintTop_toBottomOf="@+id/thisAppLabelFirst" />

    <TextView
        android:id="@+id/thisAppLabelSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tracker_this_app_second"
        android:textColor="@color/colorAccentDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/thisAppValueTextView"
        app:layout_constraintStart_toStartOf="@+id/thisAppValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/thisAppValueTextView" />

    <TextView
        android:id="@+id/genreLabelFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/tracker_genre_first"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thisAppLabelSecond" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tracker_genre_second"
        android:textColor="@color/colorAccentDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/genreAverageValue"
        app:layout_constraintStart_toStartOf="@+id/genreAverageValue"
        app:layout_constraintTop_toBottomOf="@+id/genreAverageValue" />

</android.support.constraint.ConstraintLayout>